--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ resume_name:                    "C.W.A. Coder with attitude"
 resume_title:                   "C.W.A. Resume"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "cwacoderwithattitude@gmail.com"
+resume_contact_email:           "cwa.coder.with.attitude@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+49 151 21 366 110"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_contact_address:         "Margeritenstr. 14, 61118 Bad Vilbel"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+resume_header_contact_info:     "Margeritenstr. 14, 61118 Bad Vilbel • 0151 21 366 110 • cwa.coder.with.attitude@gmail.com"
 display_header_contact_info:    "false"
 
 #resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
@@ -46,7 +46,7 @@ resume_section_associations:    false
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://CWA.CoderWithAttitude.github.io"
+  resume_github_url:            "https://cwacoderwithattitude.github.io"
   resume_twitter_url:           "http://twitter.com/JavaVolker"
   #resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
