--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ resume_header_contact_info:     "Margeritenstr. 14, 61118 Bad Vilbel • 0151 21
 display_header_contact_info:    "false"
 
 #resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>Software is in my DNA. I like to design and write code that solves a real problem. Whether it be a small piece of code or a fragment in a large scale enterprise application.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,7 +37,7 @@ resume_looking_for_work:        "no"
 resume_section_experience:      true
 resume_section_education:       false #true
 resume_section_projects:        false #true
-resume_section_skills:          false #true
+resume_section_skills:          true
 resume_section_recognition:     false #true
 resume_section_links:           false #true
 resume_section_associations:    false
