remove unfinished job descriptions

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -36,19 +36,19 @@
   summary: Implement software components to integrate Subito products with customer environment in Java and C++.  <ul class="resume-item-list"><li>Integrate Subito with bank mainframe</li></ul>
 
 # Senior Software Engineer
-- company: Volker Benders
-  position: Contract Software Engineer / Search Engine Consultant
-  duration: 2003 &mdash; 2007
-  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+#- company: Volker Benders
+#  position: Contract Software Engineer / Search Engine Consultant
+#  duration: 2003 &mdash; 2007
+#  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
 
 # Senior Software Engineer
-- company: Excalibur / Convera
-  position: Technical Consultant / Software Engineer
-  duration: 2001 &mdash; 2002
-  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+#- company: Excalibur / Convera#
+#  position: Technical Consultant / Software Engineer
+#  duration: 2001 &mdash; 2002
+#  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
 
 # Senior Software Engineer
-- company: CA Computer Associates
-  position: Senior Software Engineer
-  duration: 1998 &mdash; 2001
-  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+#- company: CA Computer Associates
+#  position: Senior Software Engineer
+##  duration: 1998 &mdash; 2001
+#  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
