--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ resume_looking_for_work:        "no"
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       false #true
-resume_section_projects:        false #true
+resume_section_projects:        true #true
 resume_section_skills:          true
 resume_section_recognition:     false #true
 resume_section_links:           false #true
