--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -9,7 +9,7 @@
 
 
 - organization: Catholic Church AHD
-  role: Volunteet
+  role: Volunteer
   year: 2006 &mdash; now
   url: https://www.ahd-ffm.de
   summary: Manage office IT, run website
