--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ resume_section_education:       false #true
 resume_section_projects:        true #true
 resume_section_skills:          true
 resume_section_recognition:     false #true
-resume_section_links:           false #true
+resume_section_links:           true
 resume_section_associations:    true 
 # resume_section_interests:       true
 
