--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,7 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://github.com/unterschiedUndMacher"
+  description: Introduced GitHub Account for UuM OpenSource Projects
+- url: "https://volkerbenders.github.io/"
+  description: My other github account
+- url: "https://javavolker.wordpress.com/"
+  description: My old blog
