--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -12,4 +12,5 @@
   role: Volunteer
   year: 2006 &mdash; now
   url: https://www.ahd-ffm.de
-  summary: Manage office IT, run website
+  summary: Manage office IT and train employees on MS Office, Adobe PDF, Capella.
+             Run website
