--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,54 +1,48 @@
 # Jobs
-# Senior Software Engineer
-- company: Unterschied & Macher GmbH
+- company: Unterschied & Macher GmbH, Frankfurt
   position: Senior Software Engineer
   duration: 2016 &mdash; Present
   summary: Maintain and develop software for Adobe AEM. JEE development and bugfixing. <ul class="resume-item-list"><li>AEM Software Develpopment in Java &amp; Groovy</li><li>Develop JWT connector for Adobe AEM</li><li>Introduce docker and migrate all development-servers to docker</li><li>Implement Matomo/Piwik Tracking for AEM Content</li><li>Internal consultancy</li><li>Workshops on AWS Lamba and NodeJS</li><li>Facilitate AWS UG Meeting and talk about AWS Lamba &amp; Kotlin</li><li>Setup Jenkins build pipeline in groovy &amp; Job-DSL</li><li>Maintain Nexus-server</li><li>Taking care of working students</li><li>Develop a BDD test suite</li><li>Setup monitoring with check_mk</li></ul>
 
-# Senior Software Engineer
-- company: BESS GmbH
+- company: BESS GmbH, Frankfurt
   position: Senior Technical Consultant / Senior Software Engineer
   duration: 2014 &mdash; 2015
   summary: Convert standard Java application into a Wildfy based JEE application and 2nd level support for customers and internal <ul class="resume-item-list"><li>Develop JEE components</li><li>Support non-technical application testing</li><li>Run & maintain Jenkins Buildserver</li><li>Establish docker based selenium grid for run BDD tests</li><li>Part of a team to migrate CVS to GIT</li><li>Setup, configuration of Tomcat, Wildfly, WebSphere and Weblogic application servers</li></ul>
 
-# Senior Software Engineer
-- company: Medical Columbus AG
+- company: Medical Columbus AG, Königstein
   position: Senior Java EE Engineer
   duration: 2014
-  summary: Redesign and implementation of the core business software <ul class="resume-item-list"></ul><li>Design and Implementation of JEE 7 Software</li><li>Technical Project Management</li><li>Develop AngularJS based frontend components</li><li>Applicartion of MongoDB</li><li>Implement Solr Search Server</li><li>Setup and maintainance of Amazon EC2 instances</li><li>Give internal training on Scrum, Git and Jira</li></ul>
+  summary: Redesign and implementation of the core business software <ul class="resume-item-list"></ul><li>Design and Implementation of JEE 7 Software</li><li>Technical Project Management</li><li>Develop AngularJS based frontend components</li><li>Implement MongoDB</li><li>Implement Solr Search Server</li><li>Setup and maintainance of Amazon EC2 instances</li><li>Give internal training on Scrum, Git and Jira</li></ul>
 
-# Senior Software Engineer
-- company: Etecture GmbH
+- company: Etecture GmbH, Frankfurt
   position: Senior Software Developer
   duration: 2012 &mdash; 2013
-  summary: Developing a software to implement parts of a car configurator. Coordinte testing efforts with other remote teams and cutomers. 	<ul class="resume-item-list"><li>JEE components</li><li>Setup and maintainance of local and remote test servers</li><li>Implement CI/CD pipeline</li></ul>
+  summary: Developing a software to implement parts of a car configurator. Coordinte testing efforts with other remote teams and cutomers. 	<ul class="resume-item-list"><li>Part in a Team of JEE developers</li><li>Setup and maintainance of local and remote test servers</li><li>Implement CI/CD pipeline</li></ul>
 
-# Senior Software Engineer
-- company: Adtech AG / AOL
+- company: Adtech AG / AOL, Dreieich
   position: Senior Software Engineer
   duration: 2008 &mdash; 2012
-  summary: Developing SOAP and REST webservices, Maintainance and development of HeliosIQ ad server, International 2nd and 3rd Level Support, Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Implement framework to test all published SOAP web services</li><li>Part project manager</li><li>Maintain local and cloud based test servers</li></ul>
+  summary: Developing SOAP and REST webservices, maintainance and development of HeliosIQ ad server, international 2nd and 3rd Level Support.<ul class="resume-item-list"><li>Implement framework to test all published SOAP web services</li><li>Part project manager</li><li>Maintain local and cloud based test servers</li></ul>
 
-# Senior Software Engineer
-- company: Subito
+- company: Subito, Frankfurt
   position: Software Developer, Consultant
   duration: 2007 &mdash; 2008
   summary: Implement software components to integrate Subito products with customer environment in Java and C++.  <ul class="resume-item-list"><li>Integrate Subito with bank mainframe</li></ul>
 
-# Senior Software Engineer
-#- company: Volker Benders
-#  position: Contract Software Engineer / Search Engine Consultant
-#  duration: 2003 &mdash; 2007
-#  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Volker Benders
+  position: Architect, Developer, Search Engine Consultant
+  duration: 2003 &mdash; 2007
+  summary: Consulting and software development.<ul class="resume-item-list"><li>Reimplement retrieval functions for a glogal logistice provider in bonn</li><li>Work on a team to visualize car components</li><li>Implement an accounting software for german telcom company</li></ul>
 
-# Senior Software Engineer
-#- company: Excalibur / Convera#
-#  position: Technical Consultant / Software Engineer
-#  duration: 2001 &mdash; 2002
-#  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Excalibur / Convera, Munich & Vienna
+  position: Technical Consultant / Software Engineer
+  duration: 2001 &mdash; 2002
+  summary: Architect, design and implement software for our search and retrieval platform. Support sales activities. Provide onsite technical support.<ul class="resume-item-list"></ul><li>Implement document management workflow for a global logistics provider.</li><li>Implement framework for easier and robust integration.</li><li>Integrate retrieval into CMSes and portal servers </li></ul>
 
-# Senior Software Engineer
-#- company: CA Computer Associates
-#  position: Senior Software Engineer
-##  duration: 1998 &mdash; 2001
-#  summary: Software development for AEMWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+
+# Consultant
+- company: I&S GmbH, Platinum, CA Computer Associates, Munich
+  position: Consultant
+  duration: 1998 &mdash; 2001
+  summary: Consulting and Software Development. Software testing.<ul class="resume-item-list"><li>Y2K maintainance for mainframe applications with PL/1 and IMS</li><li>Implement J2EE application to manage test data for car components.</li><li>L10n testing for UniCenter TNG (Paderborn)</li></ul> fY2k maintainance for mainframe applications written PL/1 and IMS.BMW, mainframe, java, unicenter tng paderborn
+
