--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,6 +2,6 @@
 - url: "https://github.com/unterschiedUndMacher"
   description: Introduced GitHub Account for UuM OpenSource Projects
 - url: "https://volkerbenders.github.io/"
-  description: My other github account
+  description: My first github account
 - url: "https://javavolker.wordpress.com/"
   description: My old blog
