--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -32,7 +32,7 @@
 - company: Volker Benders
   position: Architect, Developer, Search Engine Consultant
   duration: 2003 &mdash; 2007
-  summary: Consulting and software development.<ul class="resume-item-list"><li>Reimplement retrieval functions for a glogal logistice provider in bonn</li><li>Work on a team to visualize car components</li><li>Implement an accounting software for german telcom company</li></ul>
+  summary: Consulting and software development.<ul class="resume-item-list"><li>Reimplement retrieval functions for a glogal logistice provider in bonn</li><li>Work on a team to visualize car components</li><li>Implement an accounting software for german telecom company</li></ul>
 
 - company: Excalibur / Convera, Munich & Vienna
   position: Technical Consultant / Software Engineer
