--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -50,6 +50,12 @@
   duration: 2013
   description: Develop hybrid mobil app supporting Android and iOS with Apache Cordova. Develop Cordova components, Test-Management
 
+- project: Operieren in Afrika
+  role: Senior Software Engineer
+  duration: 2013
+  url: "http://www.operieren-in-afrika.de"
+  description: Pro-bono - build websites for non-profit organisation.
+
 - project: Car-Configurator
   role: Senior Software Engineer
   duration: 2012
