--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 - company: Unterschied & Macher GmbH, Frankfurt
   position: Senior Software Engineer
   duration: 2016 &mdash; Present
-  summary: Maintain and develop software for Adobe AEM. JEE development and bugfixing. <ul class="resume-item-list"><li>AEM Software Develpopment in Java &amp; Groovy</li><li>Develop JWT connector for Adobe AEM</li><li>Introduce docker and migrate all development-servers to docker</li><li>Implement Matomo/Piwik Tracking for AEM Content</li><li>Internal consultancy</li><li>Workshops on AWS Lamba and NodeJS</li><li>Facilitate AWS UG Meeting and talk about AWS Lamba &amp; Kotlin</li><li>Setup Jenkins build pipeline in groovy &amp; Job-DSL</li><li>Maintain Nexus-server</li><li>Taking care of working students</li><li>Develop a BDD test suite</li><li>Setup monitoring with check_mk</li></ul>
+  summary: Maintain and develop software for Adobe AEM. JEE development and bugfixing. <ul class="resume-item-list"><li>AEM Software Develpopment in Java &amp; Groovy</li><li>Develop JWT connector for Adobe AEM</li><li>Introduce docker and migrate all development-servers to docker</li><li>Implement Matomo/Piwik Tracking for AEM Content</li><li>Internal consultancy</li><li>Workshops on AWS Lamba and NodeJS</li><li>Facilitate AWS UG Meeting and talk about AWS Lamba &amp; Kotlin</li><li>Give talks on BlockChain / BitCoin</li><li>Introduce people to Lego Mindstorms as a platform for robotics coding</li><li>Setup Jenkins build pipeline in groovy &amp; Job-DSL</li><li>Maintain Nexus-server</li><li>Taking care of working students</li><li>Develop a BDD test suite</li><li>Setup monitoring with check_mk</li></ul>
 
 - company: BESS GmbH, Frankfurt
   position: Senior Technical Consultant / Senior Software Engineer
