--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ resume_name:                    "C.W.A. Coder with attitude"
 resume_title:                   "C.W.A. Resume"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "cwa.coder.with.attitude@gmail.com"
+resume_contact_email:           "CWA.Coder.With.Attitude@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+49 151 21 366 110"
@@ -35,7 +35,7 @@ resume_looking_for_work:        "no"
 # Decide which sections to use
 # comment out to hide
 resume_section_experience:      true
-resume_section_education:       false #true
+resume_section_education:       true
 resume_section_projects:        true #true
 resume_section_skills:          true
 resume_section_recognition:     false #true
