--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,6 +1,8 @@
 # links
 - url: "https://github.com/unterschiedUndMacher"
   description: Introduced GitHub Account for UuM OpenSource Projects
+- url: "https://uumacher.github.io/"
+  description: New Github account with better name
 - url: "https://volkerbenders.github.io/"
   description: My first github account
 - url: "https://javavolker.wordpress.com/"
