corrected typo and removed summary from shool

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: No degree
-  uni: University of Applied Siences Gelsenkirchen 
+  uni: University of Applied Sciences Gelsenkirchen 
   year: 1993 &mdash; 1998
   award: Electrical Engineering
   
@@ -8,4 +8,4 @@
   uni: Technical College
   year: 1993
   
-  summary: You can choose to have either a single or multiple awards
+  summary: 
