removed duplicated data

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -44,5 +44,5 @@
 - company: I&S GmbH, Platinum, CA Computer Associates, Munich
   position: Consultant
   duration: 1998 &mdash; 2001
-  summary: Consulting and Software Development. Software testing.<ul class="resume-item-list"><li>Y2K maintainance for mainframe applications with PL/1 and IMS</li><li>Implement J2EE application to manage test data for car components.</li><li>L10n testing for UniCenter TNG (Paderborn)</li></ul> Y2k maintainance for mainframe applications written in PL/1 and IMS. BMW, mainframe, java, unicenter tng paderborn
+  summary: Consulting and Software Development. Software testing.<ul class="resume-item-list"><li>Y2K maintainance for mainframe applications with PL/1 and IMS</li><li>Implement J2EE application to manage test data for car components.</li><li>L10n testing for UniCenter TNG (Paderborn)</li></ul>
 
